# ROS-Object-Detection

./: DEVELOP.md  README.md  installation_history.md  requirements.txt
assets/: foxglove_studio_layout.json  foxglove_studio_layout2.json  foxglove_studio_layout3.json
src/objectdetection/: package.xml  setup.cfg  setup.py
src/objectdetection/objectdetection/: model.py  node.py
